# Computer_vision_Task2

./: .gitignore  README.md  requirements.txt  run.bat  shape_detection_explained.md
Frontend/: index.html  operation.html  starter-page.html
Frontend/assets/css/: main.css  operation.css
Frontend/assets/js/: operation.js
backend/: CMakeLists.txt  main.cpp  main.py
backend/algorithms/: active_contour.cpp  active_contour.h  canny.py  chain_code.py  contour_analysis.cpp  contour_analysis.h  edge_detection.cpp  edge_detection.h  ellipse_fit.py  greedy_snake.py  hough_circles.py  hough_lines.py  image_utils.cpp  image_utils.h  shape_detection.cpp  shape_detection.h
backend/utils/: image_utils.py
